crates/uitest/fixtures/ty/def/alias_too_many_args.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/alias_too_many_args.fe
---
error[2-0011]: incorrect number of generic arguments for `IntMap`; expected 1, given 2
  ┌─ alias_too_many_args.fe:5:12
  │
5 │     let m: IntMap<i32, i32>
  │            ^^^^^^ expected 1 arguments, but 2 were given
